--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: "3"
+
 services:
   mysql:
+    restart: always
     image: mysql:latest
     ports:
       - "3306:3306"
@@ -13,15 +15,21 @@ services:
         interval: 30s
         timeout: 30s
         retries: 5
+    networks:
+      - rtb_network
   memcached:
+    restart: always
     image: memcached:latest
     ports:
       - "11211:11211"
+    networks:
+      - rtb_network
   webapp:
+    restart: always
     build: .
     ports:
       - "8888:8888"
-    depends_on: 
+    depends_on:
       mysql:
         condition: service_healthy
     volumes:
@@ -34,3 +42,20 @@ services:
       - SQL_PORT=3306
       - SQL_USER=root
       - SQL_PASSWORD=mysecretpassword
+    networks:
+      - rtb_network
+  nginx:
+    restart: always
+    image: nginx:1.26.2-alpine
+    ports:
+      - 8089:80
+    volumes:
+      - ./static:/usr/share/nginx/html/static
+      - ./static:/opt/rootthebox/static
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    networks:
+      - rtb_network
+
+networks:
+  rtb_network:
+    driver: bridge
